# PMPL

./: CMakeLists.txt  README.md  boris.cpp  borisRelativistic.cpp  carlo.cpp  collisional.cpp  collisionless.cpp  hot.cpp  particles.cpp  particles.h  porous.cpp  solar.cpp  sor.cpp  utils.h
scripts/: compare_sor_carlo.py  evaluate_boris.py  evaluate_boris_relativistic.py  evaluate_carlo.py  evaluate_collisional.py  evaluate_collisionless.py  evaluate_collisionless_side.py  evaluate_hot.py  evaluate_porous.py  evaluate_solar.py  evaluate_sor.py
